<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_large"
    android:layout_marginEnd="@dimen/margin_large"
    android:fitsSystemWindows="true"
    tools:context=".activities.SignUpProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <ImageView
        android:id="@+id/btnBackSignUp"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:src="@drawable/ic_baseline_arrow_accent_24dp" />

    <TextView
        android:id="@+id/tvHi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:fontFamily="serif"
        android:text="Hi !"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_heading_2x"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/lbl_create_a_new_account"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_regular_2x" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_name"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_regular_2x" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvDateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/lbl_date_of_birth"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_regular_2x" />

    <LinearLayout
        android:id="@+id/llSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDateOfBirth"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_small_n"
        android:orientation="horizontal"
        android:weightSum="10">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.8">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_xxlarge"
                android:background="@drawable/background_spinner" />

            <Spinner
                android:id="@+id/spinnerDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_xxlarge"
                android:background="@drawable/background_spinner" />

            <Spinner
                android:id="@+id/spinnerMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/months"
                android:layout_marginTop="@dimen/margin_medium" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.2">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_xxlarge"
                android:background="@drawable/background_spinner" />

            <Spinner
                android:id="@+id/spinnerYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"/>

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llSpinner"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/lbl_gender"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_regular_2x" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvGender"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/lbl_male"
                    android:textColor="@color/colorAccent" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvGender"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:layout_toEndOf="@id/rbMale"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/lbl_female"
                    android:textColor="@color/colorAccent" />

                <RadioButton
                    android:id="@+id/rbOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvGender"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_toEndOf="@id/rbFemale"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/lbl_other"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:singleLine="true"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_regular_2x" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbAgreeToTermAndService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:buttonTint="@color/colorAccent"
        android:text="@string/lbl_agree_to_term_and_service"
        android:textColor="@color/colorAccent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUpFinish"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:background="@drawable/background_button_inactive"
        android:text="@string/lbl_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold"
        android:enabled="false"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>