<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ChatFragment"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="@dimen/margin_xlarge"
                android:layout_height="@dimen/margin_xlarge"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/background_button_accent"
                android:elevation="2dp">

                <com.padcmyanmar.smtz.wechatredesign.components.RoundCornerImageView
                    android:id="@+id/btnNewMoment"
                    android:layout_width="@dimen/margin_medium_3"
                    android:layout_height="@dimen/margin_medium_3"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_search" />

            </FrameLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/margin_small"
                app:title="@string/lbl_chats"
                app:titleTextColor="@color/colorAccent" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvActiveNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:text="@string/lb_active_now" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvActivePeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="@dimen/margin_medium_3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvChats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:clipToPadding="false"
                android:paddingStart="@dimen/margin_medium_3" />

            <TextView
                android:id="@+id/tvGroupsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:text="@string/lbl_groups" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGroupChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:clipToPadding="false"
                android:paddingStart="@dimen/margin_medium_3" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/emptyViewChat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/text_regular_3x"
            android:text="No Chat yet. \nStart a new conversation!"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>