<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".fragments.ContactsFragment">

    <!--  App Bar  -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="@dimen/margin_xlarge"
                android:layout_height="@dimen/margin_xlarge"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/background_button_accent"
                android:elevation="2dp">

                <com.padcmyanmar.smtz.wechatredesign.components.RoundCornerImageView
                    android:id="@+id/btnAddNewContact"
                    android:layout_width="@dimen/margin_medium_2"
                    android:layout_height="@dimen/margin_medium_2"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_add_user" />

            </FrameLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/margin_small"
                app:title="Contacts"
                app:titleTextColor="@color/colorAccent" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--  Search Bar  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSearch"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_margin="@dimen/margin_medium_2"
                app:cardCornerRadius="@dimen/margin_medium">

                <RelativeLayout
                    android:id="@+id/rlSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/color_search_bar">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btnSearchContact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_medium_2"
                        android:src="@drawable/ic_baseline_search_accent_24dp" />

                    <TextView
                        android:id="@+id/tvSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_toEndOf="@id/btnSearchContact"
                        android:text="@string/lbl_search"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/text_regular_2x" />

                    <ImageView
                        android:id="@+id/ivClose"
                        android:layout_width="@dimen/margin_xlarge"
                        android:layout_height="@dimen/margin_xlarge"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_close_accent_24dp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvGroupsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/lbl_groups"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold" />

            <!--  groups  -->
            <HorizontalScrollView
                android:id="@+id/horizontal_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_medium_2"
                android:scrollbars="none"
                android:clipToPadding="false">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/btnAddNewGroup"
                        android:layout_width="100dp"
                        android:layout_height="110dp"
                        android:layout_marginBottom="@dimen/margin_medium_2"
                        android:backgroundTint="@color/colorAccent"
                        app:cardCornerRadius="@dimen/margin_medium">

                        <ImageView
                            android:id="@+id/btnSelectPhoto"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/margin_medium_2"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:src="@drawable/ic_add_group" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|bottom"
                            android:layout_marginBottom="@dimen/margin_card_medium_2"
                            android:text="@string/lbl_add_new"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_regular_2x" />

                    </androidx.cardview.widget.CardView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvGroups"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_medium_2"
                        android:layout_toEndOf="@id/btnAddNewGroup"
                        android:clipToPadding="false"
                        android:paddingStart="@dimen/margin_medium"
                        android:paddingEnd="@dimen/margin_medium" />

                </RelativeLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/llContactView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvContacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:text="@string/lbl_contacts"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvContacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_medium_2"
                    android:clipToPadding="false" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>